--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -64,3 +64,8 @@ We have added a column that denotes which R package contains each function (note
 | `c()` | Concatenate values together. | `c(30, 15)` | Create a vector (length 2) with two values, 30 and 15. | `base` |
 | `regress("rate", ...)` | Run Poisson regression. | `regress("rate", death_in_3 ~ crp + age + male + bmi + smoker + cholest + prevdis, data = inflamm)` | Run Poisson regression (equivalent to relative risk regression since we have a binary outcome) of death within 3 years of enrollment on CRP (adjusted for potential confounders) in the `inflamm` data | Discussion section 7 key line 128, and Chapter 2 slides, slide 2.47 | `uwIntroStats` | `glm(family = "poisson")` |
 | `glm(family = "poisson"")` | Run Poisson regression. | `glm(death_in_3 ~ crp + age + male + bmi + smoker + cholest + prevdis, family = "poisson", data = inflamm)` | Run Poisson regression (equivalent to relative risk regression since we have a binary outcome) of death within 3 years of enrollment on CRP (adjusted for potential confounders) in the `inflamm` data | Chapter 2 slides, slide 2.47 | `stats` |
+| `Surv(time = , event = )` | Create a survival object. | `Surv(time = inflamm$ttodth, event = inflamm$death)` | Create a time-to-event variable based on `ttodth` (the observed time from study enrollment until death or censoring) and the indicator of death or censoring | Chapter 3 slides, slide 3.43 | `survival` |
+| `survfit()` | Create Kaplan-Meier curves | `survfit(Surv(time = inflamm$ttodth, event = inflamm$death) ~ inflamm$diab2)` | Plot Kaplan-Meier curves for time to death stratified by diabetes status | Chapter 3 slides, slide 3.43 | `survival` | 
+| `survdiff()` | Perform a logrank test | `survdiff(Surv(time = inflamm$ttodth, event = inflamm$death) ~ inflamm$diab2)` | Perform a logrank test of the Kaplan-Meier curves of time to death stratified by diabetes status | Chapter 3 slides, slide 3.56 | `survival` | 
+| `regress("hazard", ...)` | Fit Cox proportional hazards regression | `regress("hazard", Surv(time = ttodth, event = death) ~ diab2, data = inflamm)` | Fit a Cox proportional hazards regression model of the time-to-death variable on diabetes from the `inflamm` dataset | Chapter 3 slides, slide 3.69 | `uwIntroStats` | `coxph`, from the `survival` package |
+| `coxph()` |  Fit Cox proportional hazards regression | `coxph(Surv(time = ttodth, event = death) ~ diab2, data = inflamm)` | Fit a Cox proportional hazards regression model of the time-to-death variable on diabetes from the `inflamm` dataset | Chapter 3 slides, slide 3.69 | `survival`
